HW3/y.output
Nonterminals useless in grammar

    binary_op
    shift_op
    cmp_op
    PackageStmt


Terminals unused in grammar

    TRUE
    FALSE
    RSHIFT
    LSHIFT
    IDENT
    VAR
    PACKAGE
    MUT_LIT


Rules useless in grammar

  161 binary_op: LOR
  162          | LAND
  163          | cmp_op
  164          | add_op
  165          | shift_op

  166 shift_op: LSHIFT
  167         | RSHIFT

  168 cmp_op: EQL
  169       | NEQ
  170       | LSS
  171       | LEQ
  172       | GTR
  173       | GEQ

  174 PackageStmt: PACKAGE ID


State 47 conflicts: 6 shift/reduce
State 63 conflicts: 36 reduce/reduce
State 92 conflicts: 1 shift/reduce
State 109 conflicts: 1 reduce/reduce
State 159 conflicts: 24 shift/reduce


Grammar

    0 $accept: Program $end

    1 $@1: %empty

    2 Program: $@1 GlobalStatementList

    3 GlobalStatementList: GlobalStatementList GlobalStatement
    4                    | GlobalStatement

    5 Type: INT
    6     | FLOAT
    7     | STRING
    8     | BOOL
    9     | ADDR STRING

   10 add_op: ADD
   11       | SUB

   12 mul_op: MUL
   13       | DIV
   14       | REM

   15 unary_op: NOT

   16 Expression: UnaryExpr

   17 $@2: %empty

   18 Expression: Expression LOR $@2 Expression2
   19           | Expression2

   20 $@3: %empty

   21 Expression2: Expression2 LAND $@3 Expression3
   22            | Expression3

   23 $@4: %empty

   24 Expression3: Expression3 EQL $@4 Expression4

   25 $@5: %empty

   26 Expression3: Expression3 NEQ $@5 Expression4

   27 $@6: %empty

   28 Expression3: Expression3 LSS $@6 Expression4

   29 $@7: %empty

   30 Expression3: Expression3 LEQ $@7 Expression4

   31 $@8: %empty

   32 Expression3: Expression3 GTR $@8 Expression4

   33 $@9: %empty

   34 Expression3: Expression3 GEQ $@9 Expression4
   35            | Expression4

   36 $@10: %empty

   37 Expression4: Expression4 add_op $@10 Expression5
   38            | Expression5

   39 $@11: %empty

   40 Expression5: Expression5 mul_op $@11 Expression6
   41            | Expression6

   42 Expression6: UnaryExpr
   43            | UnaryExpr AS Type

   44 UnaryExpr: PrimaryExpr
   45          | unary_op UnaryExpr
   46          | functionCall

   47 $@12: %empty

   48 functionCall: ID LPAREN $@12 ParameterListInFunctionCall RPAREN
   49             | ID LPAREN RPAREN

   50 ParameterListInFunctionCall: Operand
   51                            | Operand COMMA ParameterListInFunctionCall

   52 PrimaryExpr: Operand
   53            | ConversionExpr

   54 ConversionExpr: Type LPAREN Expression RPAREN

   55 Operand: Literal
   56        | ID
   57        | ADDR Operand LBRACK Interindex RBRACK

   58 $@13: %empty

   59 Operand: ID $@13 LBRACK INT_LIT RBRACK
   60        | LPAREN Expression RPAREN

   61 $@14: %empty

   62 Interindex: DOTDOT $@14 Literal

   63 $@15: %empty

   64 Interindex: Literal DOTDOT $@15 Literal
   65           | Literal DOTDOT

   66 Literal: INT_LIT
   67        | FLOAT_LIT
   68        | BOOL_LIT
   69        | STRING_LIT

   70 assign_op: ASSIGN
   71          | ADD_ASSIGN
   72          | SUB_ASSIGN
   73          | MUL_ASSIGN
   74          | DIV_ASSIGN
   75          | REM_ASSIGN

   76 AssignmentStmt: Expression assign_op Expression SEMICOLON

   77 IncDecStmt: Expression INC
   78           | Expression DEC

   79 StatementList: StatementList Statement
   80              | Statement

   81 Statement: DeclarationStmt
   82          | SimpleStmt
   83          | Block
   84          | IfStmt
   85          | ForStmt
   86          | SwitchStmt
   87          | CaseStmt
   88          | LetStatement LetStatementCon
   89          | PrintStmt
   90          | ReturnStmt
   91          | NEWLINE
   92          | WhileStmt
   93          | functionCall SEMICOLON
   94          | LOOPStatement

   95 LOOPStatement: BREAK Literal SEMICOLON

   96 DeclarationStmt: ID Type
   97                | ID Type assign_op Expression

   98 SimpleStmt: AssignmentStmt
   99           | ExpressionStmt
  100           | IncDecStmt

  101 $@16: %empty

  102 Block: LBRACE $@16 StatementList RBRACE

  103 IfStmt: IF Condition IfBlock ELSE IfStmt
  104       | IF Condition IfBlock
  105       | IF Condition IfBlock ELSE Block

  106 $@17: %empty

  107 IfBlock: LBRACE $@17 StatementList RBRACE

  108 $@18: %empty

  109 IfBlock: LBRACE $@18 RBRACE

  110 $@19: %empty

  111 $@20: %empty

  112 WhileStmt: WHILE $@19 Condition $@20 WhileBlock

  113 $@21: %empty

  114 WhileBlock: LBRACE $@21 StatementList RBRACE

  115 ForStmt: FOR Condition Block ELSE Block
  116        | FOR ForClause Block ELSE Block
  117        | FOR ForClause LBRACE StatementList RBRACE

  118 ForClause: InitStmt SEMICOLON Condition SEMICOLON PostStmt
  119          | ID IN Operand

  120 InitStmt: SimpleStmt

  121 Condition: Expression

  122 PostStmt: SimpleStmt

  123 SwitchStmt: SWITCH Expression

  124 CaseStmt: CASE INT_LIT COLON Block
  125         | CASE DEFAULT COLON Block

  126 LetStatement: LET ID COLON Type ASSIGN Operand SEMICOLON
  127             | LET ID COLON Type SEMICOLON
  128             | LET MUT ID COLON Type ASSIGN Literal SEMICOLON
  129             | LET MUT ID COLON Type SEMICOLON
  130             | LET ID COLON Type ASSIGN SEMICOLON
  131             | LET MUT ID COLON Type ASSIGN SEMICOLON
  132             | LET MUT ID ASSIGN Operand SEMICOLON

  133 $@22: %empty

  134 LetStatement: LET ID COLON LBRACK Type SEMICOLON Operand RBRACK ASSIGN LBRACK $@22 LiteralList RBRACK SEMICOLON
  135             | LET ID ASSIGN Operand SEMICOLON
  136             | LET ID COLON Type ASSIGN LOOP Block SEMICOLON

  137 LiteralList: Literal COMMA LiteralList
  138            | Literal

  139 LetStatementCon: ASSIGN Literal SEMICOLON
  140                | %empty

  141 $@23: %empty

  142 PrintStmt: PRINT Expression $@23 SEMICOLON

  143 $@24: %empty

  144 PrintStmt: PRINTLN Expression $@24 SEMICOLON

  145 ReturnStmt: RETURN Expression SEMICOLON

  146 GlobalStatement: FunctionDeclStmt
  147                | NEWLINE

  148 $@25: %empty

  149 FunctionDeclStmt: FuncOpen LPAREN RPAREN $@25 FuncBlock

  150 $@26: %empty

  151 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN Type $@26 FuncBlock

  152 $@27: %empty

  153 FunctionDeclStmt: FuncOpen LPAREN RPAREN ARROW Type $@27 FuncBlock

  154 $@28: %empty

  155 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN ARROW Type $@28 FuncBlock

  156 FuncOpen: FUNC ID

  157 ParameterList: ID COLON Type
  158              | ParameterList COMMA ID COLON Type

  159 FuncBlock: LBRACE StatementList RBRACE

  160 ExpressionStmt: Expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LET (258) 126 127 128 129 130 131 132 134 135 136
    MUT (259) 128 129 131 132
    NEWLINE (260) 91 147
    INT (261) 5
    FLOAT (262) 6
    BOOL (263) 8
    STRING (264) 7 9
    TRUE (265)
    FALSE (266)
    GTR (267) 32
    LSS (268) 28
    GEQ (269) 34
    LEQ (270) 30
    EQL (271) 24
    NEQ (272) 26
    LOR (273) 18
    LAND (274) 21
    ASSIGN (275) 70 126 128 130 131 132 134 135 136 139
    ADD_ASSIGN (276) 71
    SUB_ASSIGN (277) 72
    MUL_ASSIGN (278) 73
    DIV_ASSIGN (279) 74
    REM_ASSIGN (280) 75
    IF (281) 103 104 105
    ELSE (282) 103 105 115 116
    FOR (283) 115 116 117
    WHILE (284) 112
    LOOP (285) 136
    SWITCH (286) 123
    CASE (287) 124 125
    DEFAULT (288) 125
    PRINT (289) 142
    PRINTLN (290) 144
    ADDR (291) 9 57
    FUNC (292) 156
    RETURN (293) 145
    BREAK (294) 95
    ID (295) 48 49 56 59 96 97 119 126 127 128 129 130 131 132 134 135 136 156 157 158
    ARROW (296) 153 155
    AS (297) 43
    IN (298) 119
    DOTDOT (299) 62 64 65
    RSHIFT (300)
    LSHIFT (301)
    IDENT (302)
    LBRACE (303) 102 107 109 114 117 159
    RBRACE (304) 102 107 109 114 117 159
    LBRACK (305) 57 59 134
    RBRACK (306) 57 59 134
    LPAREN (307) 48 49 54 60 149 151 153 155
    RPAREN (308) 48 49 54 60 149 151 153 155
    INC (309) 77
    DEC (310) 78
    VAR (311)
    COLON (312) 124 125 126 127 128 129 130 131 134 136 157 158
    SEMICOLON (313) 76 93 95 118 126 127 128 129 130 131 132 134 135 136 139 142 144 145
    COMMA (314) 51 137 158
    PACKAGE (315)
    ADD (316) 10
    SUB (317) 11
    NOT (318) 15
    MUL (319) 12
    DIV (320) 13
    REM (321) 14
    INT_LIT <val> (322) 59 66 124
    FLOAT_LIT <val> (323) 67
    BOOL_LIT <val> (324) 68
    STRING_LIT <s_val> (325) 69
    MUT_LIT <mut_val> (326)


Nonterminals, with rules where they appear

    $accept (72)
        on left: 0
    Program (73)
        on left: 2
        on right: 0
    $@1 (74)
        on left: 1
        on right: 2
    GlobalStatementList (75)
        on left: 3 4
        on right: 2 3
    Type <type> (76)
        on left: 5 6 7 8 9
        on right: 43 54 96 97 126 127 128 129 130 131 134 136 151 153 155 157 158
    add_op <op> (77)
        on left: 10 11
        on right: 37
    mul_op <op> (78)
        on left: 12 13 14
        on right: 40
    unary_op <op> (79)
        on left: 15
        on right: 45
    Expression <val> (80)
        on left: 16 18 19
        on right: 18 54 60 76 77 78 97 121 123 142 144 145 160
    $@2 (81)
        on left: 17
        on right: 18
    Expression2 <val> (82)
        on left: 21 22
        on right: 18 19 21
    $@3 (83)
        on left: 20
        on right: 21
    Expression3 <val> (84)
        on left: 24 26 28 30 32 34 35
        on right: 21 22 24 26 28 30 32 34
    $@4 (85)
        on left: 23
        on right: 24
    $@5 (86)
        on left: 25
        on right: 26
    $@6 (87)
        on left: 27
        on right: 28
    $@7 (88)
        on left: 29
        on right: 30
    $@8 (89)
        on left: 31
        on right: 32
    $@9 (90)
        on left: 33
        on right: 34
    Expression4 <val> (91)
        on left: 37 38
        on right: 24 26 28 30 32 34 35 37
    $@10 (92)
        on left: 36
        on right: 37
    Expression5 <val> (93)
        on left: 40 41
        on right: 37 38 40
    $@11 (94)
        on left: 39
        on right: 40
    Expression6 <val> (95)
        on left: 42 43
        on right: 40 41
    UnaryExpr <val> (96)
        on left: 44 45 46
        on right: 16 42 43 45
    functionCall (97)
        on left: 48 49
        on right: 46 93
    $@12 (98)
        on left: 47
        on right: 48
    ParameterListInFunctionCall (99)
        on left: 50 51
        on right: 48 51
    PrimaryExpr <val> (100)
        on left: 52 53
        on right: 44
    ConversionExpr <val> (101)
        on left: 54
        on right: 53
    Operand <val> (102)
        on left: 55 56 57 59 60
        on right: 50 51 52 57 119 126 132 134 135
    $@13 (103)
        on left: 58
        on right: 59
    Interindex (104)
        on left: 62 64 65
        on right: 57
    $@14 (105)
        on left: 61
        on right: 62
    $@15 (106)
        on left: 63
        on right: 64
    Literal <val> (107)
        on left: 66 67 68 69
        on right: 55 62 64 65 95 128 137 138 139
    assign_op <op> (108)
        on left: 70 71 72 73 74 75
        on right: 76 97
    AssignmentStmt (109)
        on left: 76
        on right: 98
    IncDecStmt (110)
        on left: 77 78
        on right: 100
    StatementList (111)
        on left: 79 80
        on right: 79 102 107 114 117 159
    Statement (112)
        on left: 81 82 83 84 85 86 87 88 89 90 91 92 93 94
        on right: 79 80
    LOOPStatement (113)
        on left: 95
        on right: 94
    DeclarationStmt (114)
        on left: 96 97
        on right: 81
    SimpleStmt (115)
        on left: 98 99 100
        on right: 82 120 122
    Block (116)
        on left: 102
        on right: 83 105 115 116 124 125 136
    $@16 (117)
        on left: 101
        on right: 102
    IfStmt (118)
        on left: 103 104 105
        on right: 84 103
    IfBlock (119)
        on left: 107 109
        on right: 103 104 105
    $@17 (120)
        on left: 106
        on right: 107
    $@18 (121)
        on left: 108
        on right: 109
    WhileStmt (122)
        on left: 112
        on right: 92
    $@19 (123)
        on left: 110
        on right: 112
    $@20 (124)
        on left: 111
        on right: 112
    WhileBlock (125)
        on left: 114
        on right: 112
    $@21 (126)
        on left: 113
        on right: 114
    ForStmt (127)
        on left: 115 116 117
        on right: 85
    ForClause (128)
        on left: 118 119
        on right: 116 117
    InitStmt (129)
        on left: 120
        on right: 118
    Condition (130)
        on left: 121
        on right: 103 104 105 112 115 118
    PostStmt (131)
        on left: 122
        on right: 118
    SwitchStmt (132)
        on left: 123
        on right: 86
    CaseStmt (133)
        on left: 124 125
        on right: 87
    LetStatement (134)
        on left: 126 127 128 129 130 131 132 134 135 136
        on right: 88
    $@22 (135)
        on left: 133
        on right: 134
    LiteralList (136)
        on left: 137 138
        on right: 134 137
    LetStatementCon (137)
        on left: 139 140
        on right: 88
    PrintStmt <type> (138)
        on left: 142 144
        on right: 89
    $@23 (139)
        on left: 141
        on right: 142
    $@24 (140)
        on left: 143
        on right: 144
    ReturnStmt (141)
        on left: 145
        on right: 90
    GlobalStatement (142)
        on left: 146 147
        on right: 3 4
    FunctionDeclStmt (143)
        on left: 149 151 153 155
        on right: 146
    $@25 (144)
        on left: 148
        on right: 149
    $@26 (145)
        on left: 150
        on right: 151
    $@27 (146)
        on left: 152
        on right: 153
    $@28 (147)
        on left: 154
        on right: 155
    FuncOpen <s_val> (148)
        on left: 156
        on right: 149 151 153 155
    ParameterList <s_val> (149)
        on left: 157 158
        on right: 151 155 158
    FuncBlock (150)
        on left: 159
        on right: 149 151 153 155
    ExpressionStmt (151)
        on left: 160
        on right: 99


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 ($@1)

    Program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


State 2

    2 Program: $@1 . GlobalStatementList

    NEWLINE  shift, and go to state 4
    FUNC     shift, and go to state 5

    GlobalStatementList  go to state 6
    GlobalStatement      go to state 7
    FunctionDeclStmt     go to state 8
    FuncOpen             go to state 9


State 3

    0 $accept: Program $end .

    $default  accept


State 4

  147 GlobalStatement: NEWLINE .

    $default  reduce using rule 147 (GlobalStatement)


State 5

  156 FuncOpen: FUNC . ID

    ID  shift, and go to state 10


State 6

    2 Program: $@1 GlobalStatementList .
    3 GlobalStatementList: GlobalStatementList . GlobalStatement

    NEWLINE  shift, and go to state 4
    FUNC     shift, and go to state 5

    $default  reduce using rule 2 (Program)

    GlobalStatement   go to state 11
    FunctionDeclStmt  go to state 8
    FuncOpen          go to state 9


State 7

    4 GlobalStatementList: GlobalStatement .

    $default  reduce using rule 4 (GlobalStatementList)


State 8

  146 GlobalStatement: FunctionDeclStmt .

    $default  reduce using rule 146 (GlobalStatement)


State 9

  149 FunctionDeclStmt: FuncOpen . LPAREN RPAREN $@25 FuncBlock
  151                 | FuncOpen . LPAREN ParameterList RPAREN Type $@26 FuncBlock
  153                 | FuncOpen . LPAREN RPAREN ARROW Type $@27 FuncBlock
  155                 | FuncOpen . LPAREN ParameterList RPAREN ARROW Type $@28 FuncBlock

    LPAREN  shift, and go to state 12


State 10

  156 FuncOpen: FUNC ID .

    $default  reduce using rule 156 (FuncOpen)


State 11

    3 GlobalStatementList: GlobalStatementList GlobalStatement .

    $default  reduce using rule 3 (GlobalStatementList)


State 12

  149 FunctionDeclStmt: FuncOpen LPAREN . RPAREN $@25 FuncBlock
  151                 | FuncOpen LPAREN . ParameterList RPAREN Type $@26 FuncBlock
  153                 | FuncOpen LPAREN . RPAREN ARROW Type $@27 FuncBlock
  155                 | FuncOpen LPAREN . ParameterList RPAREN ARROW Type $@28 FuncBlock

    ID      shift, and go to state 13
    RPAREN  shift, and go to state 14

    ParameterList  go to state 15


State 13

  157 ParameterList: ID . COLON Type

    COLON  shift, and go to state 16


State 14

  149 FunctionDeclStmt: FuncOpen LPAREN RPAREN . $@25 FuncBlock
  153                 | FuncOpen LPAREN RPAREN . ARROW Type $@27 FuncBlock

    ARROW  shift, and go to state 17

    $default  reduce using rule 148 ($@25)

    $@25  go to state 18


State 15

  151 FunctionDeclStmt: FuncOpen LPAREN ParameterList . RPAREN Type $@26 FuncBlock
  155                 | FuncOpen LPAREN ParameterList . RPAREN ARROW Type $@28 FuncBlock
  158 ParameterList: ParameterList . COMMA ID COLON Type

    RPAREN  shift, and go to state 19
    COMMA   shift, and go to state 20


State 16

  157 ParameterList: ID COLON . Type

    INT     shift, and go to state 21
    FLOAT   shift, and go to state 22
    BOOL    shift, and go to state 23
    STRING  shift, and go to state 24
    ADDR    shift, and go to state 25

    Type  go to state 26


State 17

  153 FunctionDeclStmt: FuncOpen LPAREN RPAREN ARROW . Type $@27 FuncBlock

    INT     shift, and go to state 21
    FLOAT   shift, and go to state 22
    BOOL    shift, and go to state 23
    STRING  shift, and go to state 24
    ADDR    shift, and go to state 25

    Type  go to state 27


State 18

  149 FunctionDeclStmt: FuncOpen LPAREN RPAREN $@25 . FuncBlock

    LBRACE  shift, and go to state 28

    FuncBlock  go to state 29


State 19

  151 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN . Type $@26 FuncBlock
  155                 | FuncOpen LPAREN ParameterList RPAREN . ARROW Type $@28 FuncBlock

    INT     shift, and go to state 21
    FLOAT   shift, and go to state 22
    BOOL    shift, and go to state 23
    STRING  shift, and go to state 24
    ADDR    shift, and go to state 25
    ARROW   shift, and go to state 30

    Type  go to state 31


State 20

  158 ParameterList: ParameterList COMMA . ID COLON Type

    ID  shift, and go to state 32


State 21

    5 Type: INT .

    $default  reduce using rule 5 (Type)


State 22

    6 Type: FLOAT .

    $default  reduce using rule 6 (Type)


State 23

    8 Type: BOOL .

    $default  reduce using rule 8 (Type)


State 24

    7 Type: STRING .

    $default  reduce using rule 7 (Type)


State 25

    9 Type: ADDR . STRING

    STRING  shift, and go to state 33


State 26

  157 ParameterList: ID COLON Type .

    $default  reduce using rule 157 (ParameterList)


State 27

  153 FunctionDeclStmt: FuncOpen LPAREN RPAREN ARROW Type . $@27 FuncBlock

    $default  reduce using rule 152 ($@27)

    $@27  go to state 34


State 28

  159 FuncBlock: LBRACE . StatementList RBRACE

    LET         shift, and go to state 35
    NEWLINE     shift, and go to state 36
    INT         shift, and go to state 21
    FLOAT       shift, and go to state 22
    BOOL        shift, and go to state 23
    STRING      shift, and go to state 24
    IF          shift, and go to state 37
    FOR         shift, and go to state 38
    WHILE       shift, and go to state 39
    SWITCH      shift, and go to state 40
    CASE        shift, and go to state 41
    PRINT       shift, and go to state 42
    PRINTLN     shift, and go to state 43
    ADDR        shift, and go to state 44
    RETURN      shift, and go to state 45
    BREAK       shift, and go to state 46
    ID          shift, and go to state 47
    LBRACE      shift, and go to state 48
    LPAREN      shift, and go to state 49
    NOT         shift, and go to state 50
    INT_LIT     shift, and go to state 51
    FLOAT_LIT   shift, and go to state 52
    BOOL_LIT    shift, and go to state 53
    STRING_LIT  shift, and go to state 54

    Type             go to state 55
    unary_op         go to state 56
    Expression       go to state 57
    Expression2      go to state 58
    Expression3      go to state 59
    Expression4      go to state 60
    Expression5      go to state 61
    Expression6      go to state 62
    UnaryExpr        go to state 63
    functionCall     go to state 64
    PrimaryExpr      go to state 65
    ConversionExpr   go to state 66
    Operand          go to state 67
    Literal          go to state 68
    AssignmentStmt   go to state 69
    IncDecStmt       go to state 70
    StatementList    go to state 71
    Statement        go to state 72
    LOOPStatement    go to state 73
    DeclarationStmt  go to state 74
    SimpleStmt       go to state 75
    Block            go to state 76
    IfStmt           go to state 77
    WhileStmt        go to state 78
    ForStmt          go to state 79
    SwitchStmt       go to state 80
    CaseStmt         go to state 81
    LetStatement     go to state 82
    PrintStmt        go to state 83
    ReturnStmt       go to state 84
    ExpressionStmt   go to state 85


State 29

  149 FunctionDeclStmt: FuncOpen LPAREN RPAREN $@25 FuncBlock .

    $default  reduce using rule 149 (FunctionDeclStmt)


State 30

  155 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN ARROW . Type $@28 FuncBlock

    INT     shift, and go to state 21
    FLOAT   shift, and go to state 22
    BOOL    shift, and go to state 23
    STRING  shift, and go to state 24
    ADDR    shift, and go to state 25

    Type  go to state 86


State 31

  151 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN Type . $@26 FuncBlock

    $default  reduce using rule 150 ($@26)

    $@26  go to state 87


State 32

  158 ParameterList: ParameterList COMMA ID . COLON Type

    COLON  shift, and go to state 88


State 33

    9 Type: ADDR STRING .

    $default  reduce using rule 9 (Type)


State 34

  153 FunctionDeclStmt: FuncOpen LPAREN RPAREN ARROW Type $@27 . FuncBlock

    LBRACE  shift, and go to state 28

    FuncBlock  go to state 89


State 35

  126 LetStatement: LET . ID COLON Type ASSIGN Operand SEMICOLON
  127             | LET . ID COLON Type SEMICOLON
  128             | LET . MUT ID COLON Type ASSIGN Literal SEMICOLON
  129             | LET . MUT ID COLON Type SEMICOLON
  130             | LET . ID COLON Type ASSIGN SEMICOLON
  131             | LET . MUT ID COLON Type ASSIGN SEMICOLON
  132             | LET . MUT ID ASSIGN Operand SEMICOLON
  134             | LET . ID COLON LBRACK Type SEMICOLON Operand RBRACK ASSIGN LBRACK $@22 LiteralList RBRACK SEMICOLON
  135             | LET . ID ASSIGN Operand SEMICOLON
  136             | LET . ID COLON Type ASSIGN LOOP Block SEMICOLON

    MUT  shift, and go to state 90
    ID   shift, and go to state 91


State 36

   91 Statement: NEWLINE .

    $default  reduce using rule 91 (Statement)


State 37

  103 IfStmt: IF . Condition IfBlock ELSE IfStmt
  104       | IF . Condition IfBlock
  105       | IF . Condition IfBlock ELSE Block

    INT         shift, and go to state 21
    FLOAT       shift, and go to state 22
    BOOL        shift, and go to state 23
    STRING      shift, and go to state 24
    ADDR        shift, and go to state 44
    ID          shift, and go to state 92
    LPAREN      shift, and go to state 49
    NOT         shift, and go to state 50
    INT_LIT     shift, and go to state 51
    FLOAT_LIT   shift, and go to state 52
    BOOL_LIT    shift, and go to state 53
    STRING_LIT  shift, and go to state 54

    Type            go to state 55
    unary_op        go to state 56
    Expression      go to state 93
    Expression2     go to state 58
    Expression3     go to state 59
    Expression4     go to state 60
    Expression5     go to state 61
    Expression6     go to state 62
    UnaryExpr       go to state 63
    functionCall    go to state 94
    PrimaryExpr     go to state 65
    ConversionExpr  go to state 66
    Operand         go to state 67
    Literal         go to state 68
    Condition       go to state 95


State 38

  115 ForStmt: FOR . Condition Block ELSE Block
  116        | FOR . ForClause Block ELSE Block
  117        | FOR . ForClause LBRACE StatementList RBRACE

    INT         shift, and go to state 21
    FLOAT       shift, and go to state 22
    BOOL        shift, and go to state 23
    STRING      shift, and go to state 24
    ADDR        shift, and go to state 44
    ID          shift, and go to state 96
    LPAREN      shift, and go to state 49
    NOT         shift, and go to state 50
    INT_LIT     shift, and go to state 51
    FLOAT_LIT   shift, and go to state 52
    BOOL_LIT    shift, and go to state 53
    STRING_LIT  shift, and go to state 54

    Type            go to state 55
    unary_op        go to state 56
    Expression      go to state 97
    Expression2     go to state 58
    Expression3     go to state 59
    Expression4     go to state 60
    Expression5     go to state 61
    Expression6     go to state 62
    UnaryExpr       go to state 63
    functionCall    go to state 94
    PrimaryExpr     go to state 65
    ConversionExpr  go to state 66
    Operand         go to state 67
    Literal         go to state 68
    AssignmentStmt  go to state 69
    IncDecStmt      go to state 70
    SimpleStmt      go to state 98
    ForClause       go to state 99
    InitStmt        go to state 100
    Condition       go to state 101
    ExpressionStmt  go to state 85


State 39

  112 WhileStmt: WHILE . $@19 Condition $@20 WhileBlock

    $default  reduce using rule 110 ($@19)

    $@19  go to state 102


State 40

  123 SwitchStmt: SWITCH . Expression

    INT         shift, and go to state 21
    FLOAT       shift, and go to state 22
    BOOL        shift, and go to state 23
    STRING      shift, and go to state 24
    ADDR        shift, and go to state 44
    ID          shift, and go to state 92
    LPAREN      shift, and go to state 49
    NOT         shift, and go to state 50
    INT_LIT     shift, and go to state 51
    FLOAT_LIT   shift, and go to state 52
    BOOL_LIT    shift, and go to state 53
    STRING_LIT  shift, and go to state 54

    Type            go to state 55
    unary_op        go to state 56
    Expression      go to state 103
    Expression2     go to state 58
    Expression3     go to state 59
    Expression4     go to state 60
    Expression5     go to state 61
    Expression6     go to state 62
    UnaryExpr       go to state 63
    functionCall    go to state 94
    PrimaryExpr     go to state 65
    ConversionExpr  go to state 66
    Operand         go to state 67
    Literal         go to state 68


State 41

  124 CaseStmt: CASE . INT_LIT COLON Block
  125         | CASE . DEFAULT COLON Block

    DEFAULT  shift, and go to state 104
    INT_LIT  shift, and go to state 105


State 42

  142 PrintStmt: PRINT . Expression $@23 SEMICOLON

    INT         shift, and go to state 21
    FLOAT       shift, and go to state 22
    BOOL        shift, and go to state 23
    STRING      shift, and go to state 24
    ADDR        shift, and go to state 44
    ID          shift, and go to state 92
    LPAREN      shift, and go to state 49
    NOT         shift, and go to state 50
    INT_LIT     shift, and go to state 51
    FLOAT_LIT   shift, and go to state 52
    BOOL_LIT    shift, and go to state 53
    STRING_LIT  shift, and go to state 54

    Type            go to state 55
    unary_op        go to state 56
    Expression      go to state 106
    Expression2     go to state 58
    Expression3     go to state 59
    Expression4     go to state 60
    Expression5     go to state 61
    Expression6     go to state 62
    UnaryExpr       go to state 63
    functionCall    go to state 94
    PrimaryExpr     go to state 65
    ConversionExpr  go to state 66
    Operand         go to state 67
    Literal         go to state 68


State 43

  144 PrintStmt: PRINTLN . Expression $@24 SEMICOLON

    INT         shift, and go to state 21
    FLOAT       shift, and go to state 22
    BOOL        shift, and go to state 23
    STRING      shift, and go to state 24
    ADDR        shift, and go to state 44
    ID          shift, and go to state 92
    LPAREN      shift, and go to state 49
    NOT         shift, and go to state 50
    INT_LIT     shift, and go to state 51
    FLOAT_LIT   shift, and go to state 52
    BOOL_LIT    shift, and go to state 53
    STRING_LIT  shift, and go to state 54

    Type            go to state 55
    unary_op        go to state 56
    Expression      go to state 107
    Expression2     go to state 58
    Expression3     go to state 59
    Expression4     go to state 60
    Expression5     go to state 61
    Expression6     go to state 62
    UnaryExpr       go to state 63
    functionCall    go to state 94
    PrimaryExpr     go to state 65
    ConversionExpr  go to state 66
    Operand         go to state 67
    Literal         go to state 68


State 44

    9 Type: ADDR . STRING
   57 Operand: ADDR . Operand LBRACK Interindex RBRACK

    STRING      shift, and go to state 33
    ADDR        shift, and go to state 108
    ID          shift, and go to state 109
    LPAREN      shift, and go to state 49
    INT_LIT     shift, and go to state 51
    FLOAT_LIT   shift, and go to state 52
    BOOL_LIT    shift, and go to state 53
    STRING_LIT  shift, and go to state 54

    Operand  go to state 110
    Literal  go to state 68


State 45

  145 ReturnStmt: RETURN . Expression SEMICOLON

    INT         shift, and go to state 21
    FLOAT       shift, and go to state 22
    BOOL        shift, and go to state 23
    STRING      shift, and go to state 24
    ADDR        shift, and go to state 44
    ID          shift, and go to state 92
    LPAREN      shift, and go to state 49
    NOT         shift, and go to state 50
    INT_LIT     shift, and go to state 51
    FLOAT_LIT   shift, and go to state 52
    BOOL_LIT    shift, and go to state 53
    STRING_LIT  shift, and go to state 54

    Type            go to state 55
    unary_op        go to state 56
    Expression      go to state 111
    Expression2     go to state 58
    Expression3     go to state 59
    Expression4     go to state 60
    Expression5     go to state 61
    Expression6     go to state 62
    UnaryExpr       go to state 63
    functionCall    go to state 94
    PrimaryExpr     go to state 65
    ConversionExpr  go to state 66
    Operand         go to state 67
    Literal         go to state 68


State 46

   95 LOOPStatement: BREAK . Literal SEMICOLON

    INT_LIT     shift, and go to state 51
    FLOAT_LIT   shift, and go to state 52
    BOOL_LIT    shift, and go to state 53
    STRING_LIT  shift, and go to state 54

    Literal  go to state 112


State 47

   48 functionCall: ID . LPAREN $@12 ParameterListInFunctionCall RPAREN
   49             | ID . LPAREN RPAREN
   56 Operand: ID .
   59        | ID . $@13 LBRACK INT_LIT RBRACK
   96 DeclarationStmt: ID . Type
   97                | ID . Type assign_op Expression

    INT     shift, and go to state 21
    FLOAT   shift, and go to state 22
    BOOL    shift, and go to state 23
    STRING  shift, and go to state 24
    ADDR    shift, and go to state 25
    LPAREN  shift, and go to state 113

    INT       [reduce using rule 56 (Operand)]
    FLOAT     [reduce using rule 56 (Operand)]
    BOOL      [reduce using rule 56 (Operand)]
    STRING    [reduce using rule 56 (Operand)]
    ADDR      [reduce using rule 56 (Operand)]
    LBRACK    reduce using rule 58 ($@13)
    LPAREN    [reduce using rule 56 (Operand)]
    $default  reduce using rule 56 (Operand)

    Type  go to state 114
    $@13  go to state 115


State 48

  102 Block: LBRACE . $@16 StatementList RBRACE

    $default  reduce using rule 101 ($@16)

    $@16  go to state 116


State 49

   60 Operand: LPAREN . Expression RPAREN

    INT         shift, and go to state 21
    FLOAT       shift, and go to state 22
    BOOL        shift, and go to state 23
    STRING      shift, and go to state 24
    ADDR        shift, and go to state 44
    ID          shift, and go to state 92
    LPAREN      shift, and go to state 49
    NOT         shift, and go to state 50
    INT_LIT     shift, and go to state 51
    FLOAT_LIT   shift, and go to state 52
    BOOL_LIT    shift, and go to state 53
    STRING_LIT  shift, and go to state 54

    Type            go to state 55
    unary_op        go to state 56
    Expression      go to state 117
    Expression2     go to state 58
    Expression3     go to state 59
    Expression4     go to state 60
    Expression5     go to state 61
    Expression6     go to state 62
    UnaryExpr       go to state 63
    functionCall    go to state 94
    PrimaryExpr     go to state 65
    ConversionExpr  go to state 66
    Operand         go to state 67
    Literal         go to state 68


State 50

   15 unary_op: NOT .

    $default  reduce using rule 15 (unary_op)


State 51

   66 Literal: INT_LIT .

    $default  reduce using rule 66 (Literal)


State 52

   67 Literal: FLOAT_LIT .
